objects/CreditCardsBins__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting  para registrar bins de  las tarjetas de credito</description>
    <fields>
        <fullName>CredicardTypeId__c</fullName>
        <label>CredicardTypeId</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>CreditCardsBins</label>
    <listViews>
        <fullName>CreditCardsBins</fullName>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>CredicardTypeId__c</columns>
        <columns>Valid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Credit Cards Bins</label>
        <language>en_US</language>
    </listViews>
</CustomObject>